:sparkles: Add new route to get system informations
